# roctogen

./: .gitignore  .grenrc.json  CHANGELOG.md  Cargo.toml  README.md  pom.xml
.github/workflows/: check.yml  default.yml  update.yml
codegen/java/github/: CodegenTag.java  GitHubCodegen.java  RustServerCodegen.java
codegen/templates/: api.mustache  endpoints.mustache  lib.mustache  models.mustache
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/adapters/: reqwest.rs
core/tests/: simple.rs
core/tests/stubs/__files/: body-gists-public-jAiWv.json  body-meta-UpvZy.json  body-repos-fussybeaver-bollard-commits-MzcU8.json  body-repos-fussybeaver-bollard-issues-68wNX.json  body-repos-fussybeaver-bollard-issues-comments-2RXrT.json  body-repos-fussybeaver-bollard-labels-157cI.json  body-repos-fussybeaver-bollard-license-DMLLq.json  body-users-fussybeaver-starred-tTWDw.json  body-users-tXACn.json
core/tests/stubs/mappings/: mapping-licenses-MMedz.json  mapping-meta-UpvZy.json  mapping-repos-fussybeaver-bollard-branches-master-protection-restrictions-users-9ARKG.json  mapping-repos-fussybeaver-bollard-commits-MzcU8.json  mapping-repos-fussybeaver-bollard-commits-XlXSM.json  mapping-repos-fussybeaver-bollard-events-GsS4J.json  mapping-repos-fussybeaver-bollard-issues-68wNX.json  mapping-repos-fussybeaver-bollard-license-DMLLq.json  mapping-repos-fussybeaver-bollard-milestones-5fuAv.json  mapping-repos-fussybeaver-bollard-subscribers-lmpNw.json  mapping-repos-this-user-does-not-exist-bollard-commits-pHO1B.json  mapping-users-fussybeaver-projects-iSt55.json  mapping-users-fussybeaver-subscriptions-wv2Q5.json  mapping-users-tXACn.json
examples/: isahc.rs
examples/auth/common/: Cargo.toml
examples/auth/common/src/: lib.rs
examples/auth/common/src/jwt/: mod.rs
examples/auth/github-update-issue-bot/: .gitignore  Cargo.toml  README.md  wrangler.toml.example
examples/auth/github-update-issue-bot/src/: lib.rs
examples/auth/github-update-issue-bot/worker/: worker.js
examples/auth/roctogen-jwt/: Cargo.toml  README.md  wrangler.toml.example
examples/auth/roctogen-jwt/src/: lib.rs
examples/auth/roctogen-jwt/worker/: worker.js
examples/auth/wasm-jwt/: Cargo.toml  wrangler.toml.example
examples/auth/wasm-jwt/src/: lib.rs
examples/auth/wasm-jwt/worker/: worker.js
examples/min-req-adapter/: Cargo.toml  README.md
examples/min-req-adapter/src/: main.rs
examples/search/: Cargo.toml  README.md
examples/search/src/: main.rs
java/github/: CodegenTag.java  GitHubCodegen.java  IfCondHelper.java  RustServerCodegen.java
java/io/swagger/codegen/v3/: DefaultGenerator.java
java/io/swagger/codegen/v3/generators/: DefaultCodegenConfig.java
roctogen/: Cargo.toml  README.md
roctogen/src/: lib.rs  models.rs
roctogen/src/endpoints/: actions.rs  activity.rs  apps.rs  billing.rs  checks.rs  classroom.rs  code_scanning.rs  code_security.rs  codes_of_conduct.rs  codespaces.rs  copilot.rs  dependabot.rs  dependency_graph.rs  emojis.rs  gists.rs  git.rs  gitignore.rs  hosted_compute.rs  interactions.rs  issues.rs  licenses.rs  markdown.rs  meta.rs  migrations.rs  mod.rs  oidc.rs  orgs.rs  packages.rs  private_registries.rs  projects.rs  pulls.rs  rate_limit.rs  reactions.rs  repos.rs  search.rs  secret_scanning.rs  security_advisories.rs  teams.rs  users.rs
roctokit-core/src/: lib.rs
roctokit-core/tests/: sync.rs
roctokit-core/tests/stubs/__files/: body-repos-fussybeaver-bollard-branches-master-protection-restrictions-users-9ARKG.json
roctokit-core/tests/stubs/mappings/: mapping-rate_limit-WEcsT.json  mapping-repos-fussybeaver-bollard-issues-86-reactions-v1oBT.json  mapping-users-fussybeaver-gpg_keys-H9I34.json
src/: api_impl.rs  lib.rs  models.rs
src/adapters/: isahc.rs  mod.rs  reqwest.rs  ureq.rs  wasm.rs
src/endpoints/: actions.rs  activity.rs  apps.rs  audit_log.rs  billing.rs  checks.rs  classroom.rs  code_scanning.rs  code_security.rs  codes_of_conduct.rs  codespaces.rs  copilot.rs  dependabot.rs  dependency_graph.rs  emojis.rs  enterprise_admin.rs  gists.rs  git.rs  gitignore.rs  hosted_compute.rs  interactions.rs  issues.rs  licenses.rs  markdown.rs  meta.rs  migrations.rs  mod.rs  oauth_authorizations.rs  oidc.rs  orgs.rs  packages.rs  private_registries.rs  projects.rs  pulls.rs  rate_limit.rs  reactions.rs  repos.rs  scim.rs  search.rs  secret_scanning.rs  (+3 more)
src/main/java/github/: GitHubCodegen.java  RustServerCodegen.java
templates/: Cargo.mustache  api.mustache  api_impl.rs  client.mustache  endpoints.mustache  lib.mustache  models.mustache
tests/: simple.rs  sync.rs
tests/stubs/__files/: body-rate_limit-WEcsT.json  body-repos-fussybeaver-bollard-commits-XlXSM.json  body-repos-fussybeaver-bollard-events-GsS4J.json  body-repos-fussybeaver-bollard-issues-86-reactions-v1oBT.json  body-repos-fussybeaver-bollard-issues-events-JDYdG.json  body-repos-fussybeaver-bollard-subscribers-lmpNw.json  body-repos-this-user-does-not-exist-bollard-commits-pHO1B.json  body-search-repositories-eeDr8.json  body-users-fussybeaver-subscriptions-wv2Q5.json
tests/stubs/mappings/: mapping-gists-public-jAiWv.json  mapping-licenses-unlicense-7CKkm.json  mapping-repos-fussybeaver-bollard-issues-comments-2RXrT.json  mapping-repos-fussybeaver-bollard-issues-events-JDYdG.json  mapping-repos-fussybeaver-bollard-labels-157cI.json  mapping-search-repositories-eeDr8.json  mapping-users-fussybeaver-starred-tTWDw.json
