[package]
name = "github-stubs"
version = "1.1.4"
authors = [ "GitHub Stubs contributors" ]
description = "Stubs used for the Praiya rust async Pagerduty client API"
license = "Apache-2.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
http = "0.2.3"
log = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = {version = "1.0"}
base64 = "*"
env_logger = "0.8"

isahc = { version = "1.1.0", optional = true, features = ["json"] }

[[example]]
name = "isahc"
path = "examples/isahc.rs"
features = ["isahc"]

[dev-dependencies]
isahc = { version = "1.1.0", features = ["json"] }
