[workspace]
members = [
  "roctogen",
  "examples/auth/*",
  "examples/min-req-adapter",
  "core",
]
exclude = [
  "codegen/**",
  "examples/auth/*",
  "examples/min-req-adapter",
  "examples/search"
]
resolver = "3"

[workspace.dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
http = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = {version = "1.0"}
serde_urlencoded = { version = "0.7" }
thiserror = "1"
log = "0.4"

# wasm
cfg-if = { version = "1" }
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4" }
console_error_panic_hook = { version = "0.1.1" }
wee_alloc = { version = "0.4.2" }
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = [ 'Headers', 'Request', 'RequestInit', 'Response', 'ServiceWorkerGlobalScope', 'Window', 'console' ] }
console_log = { version = "1", features = ["color"] }

roctokit = { path = "core", version = "0.15" }
roctogen = { path = "roctogen" }


