[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
chrono = "0.4"
futures = { version = "0.3" }
futures-util = { version = "0.3" }
hyper = "1"
hyper-util = { version = "0.1", features = ["http1", "client-legacy", "tokio"] }
hyper-rustls = "0.27"
http-body-util = "0.1"
rustls = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
roctogen = { path = "../../" }
