[package]
name = "roctogen-common"
version = "0.1.0"
authors = ["Niel Drummond <niel.drummond@fundingcircle.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
wasm-bindgen = { version = "=0.2.72", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
js-sys = "0.3"
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
chrono = { version = "0.4", features = ["wasmbind"] }
pem = "0.8.1"
base64 = "0.13"

[dependencies.web-sys]
version = "0.3"
features = [
  'Crypto',
  'CryptoKey',
  'SubtleCrypto',
  'ServiceWorkerGlobalScope',
  'console',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
