[package]
name = "roctogen-common"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
log = { workspace = true }
console_log = { version = "1", features = ["color"] }
chrono = { workspace = true, features = ["wasmbind"] }
pem = "3"
base64 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
workspace = true
features = [
  'Crypto',
  'CryptoKey',
  'SubtleCrypto',
  'ServiceWorkerGlobalScope',
  'console',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
