[package]
name = "roctogen-github-update-issue-bot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
debug = []

[dependencies]
cfg-if.workspace = true
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_derive.workspace = true
serde_json.workspace = true
roctogen.workspace = true
roctokit.workspace = true
js-sys.workspace = true
log.workspace = true
console_log = { workspace = true, features = ["color"] }
chrono = { workspace = true, features = ["wasmbind"] }
pem = "3"
base64.workspace = true
roctogen-common = { version = "*", path = "../common" }
regex = "1.4"

[dependencies.web-sys]
workspace = true
features = [
  'Crypto',
  'CryptoKey',
  'SubtleCrypto',
  'ServiceWorkerGlobalScope',
  'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
