[package]
name = "roctogen-jwt-example"
version = "0.1.0"
authors = ["Niel Drummond <niel.drummond@fundingcircle.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "debug"]
debug = []

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = { version = "=0.2.72", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
roctogen = { version = "*", path = "../../.." }
js-sys = "0.3"
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
chrono = { version = "0.4", features = ["wasmbind"] }
pem = "0.8.1"
base64 = "0.13"

[dependencies.web-sys]
version = "0.3"
features = [
  'Crypto',
  'CryptoKey',
  'SubtleCrypto',
  'ServiceWorkerGlobalScope',
  'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
