[package]
name = "roctogen-jwt-example"
version = "0.1.0"
authors = ["Niel Drummond <niel.drummond@fundingcircle.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "debug"]
debug = []

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = { version = "=0.2.72", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1.1", optional = true }
roctogen = { version = "*", path = "../../.." }
js-sys = "0.3"
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
roctogen-common = { version = "0.1.0", path = "../common" }

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
