[package]
name = "roctogen-jwt-example"
version = "0.1.0"
authors = ["Niel Drummond <niel.drummond@fundingcircle.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "debug"]
debug = []

[dependencies]
cfg-if.workspace = true
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
roctogen = { version = "*", path = "../../.." }
js-sys.workspace = true
log.workspace = true
console_log = { workspace = true, features = ["color"] }
roctogen-common = { version = "*", path = "../common" }

[dependencies.web-sys]
workspace = true
features = [
  'console',
]
